Bootstrap script cleanup
No submissions nor references to submissions without videos.
Removed references from sessions to submissions that's not papers

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "nano": "*",
     "ya-csv": "*",
     "socket.io": "*",
-    "searchjs": "*"
+    "searchjs": "*",
+    "simplesets": "*"
   }
 }
