--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "name": "Lobby",
     "db": "chi2013",
+    "port": 80,
     "tickFrequency": 25000,
     "videoDir": "/videos",
     "tiles": {
