Added option to filters so if they have a "when" attribute set to "now" they will filter on ongoing or upcoming, otherwise on the rest of the day.

--- a/config.json
+++ b/config.json
@@ -13,42 +13,49 @@
         "B": {
             "type": "filter",
             "filter": {
+                "when": "now",
                 "room": ["241", "242", "243"]
             }
         },
         "C": {
             "type": "filter",
             "filter": {
+                "when": "now",
                 "room": ["251", "252"]
             }
         },
         "D": {
             "type": "filter",
             "filter": {
+                "when": "now",
                 "room": ["253", "Blue"]
             }
         },
         "E": {
             "type": "filter",
             "filter": {
+                "when": "now",
                 "room": ["Bordeaux", "341"]
             }
         },
         "F": {
             "type": "filter",
             "filter": {
+                "when": "now",
                 "room": ["342", "343"]
             }
         },
         "G": {
             "type": "filter",
             "filter": {
+                "when": "now",
                 "room": ["Havane", "351"]
             }
         },
         "H": {
             "type": "filter",
             "filter": {
+                "when": "now",
                 "room": ["352", "353"]
             }
         }
