--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "nano": "*",
     "ya-csv": "*",
     "socket.io": "*",
-    "searchjs": "*",
+    "searchjs": "0.1.3",
     "simplesets": "*",
     "underscore": "*",
     "winston": "~0.6.2",
