Added support for setting a time offset in the configuration. E.g. to make sure that configurations change 10 mins before a session starts

--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
     "videoDir": "http://92.243.30.77:8000/videos",
     "orientation": "vertical",
     "fixedTime": [2013, 4, 30, 10, 21],
+    "timeOffset": 600000,
     "searchFields": ["authors", "room", "title", "authorEmails", "authorKeywords", "communities", "acmClassifiers", "institutions", "cities", "states", "countries"],
     "breakTiles": {
         "A": {
