--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     "db": "chi2013",
     "port": 8000,
     "tickFrequency": 30000,
+    "viihapticsEnabled": true,
     "videoDir": "http://92.243.30.77:8000/videos",
     "roomOrder": ["251", "252A", "252B", "253", "Blue", "241", "242A", "242B", "242AB", "243", "Havane", "351", "352AB", "Bordeaux", "342A", "343", "361", "362/363", "interactivity"],
     "orientation": "vertical",
