--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "simplesets": "*",
     "underscore": "*",
     "winston": "~0.6.2",
-    "express-winston": "~0.2.0"
+    "express-winston": "~0.2.0",
+    "osc-min": "0.0.9"
   }
 }
