--- a/config.json
+++ b/config.json
@@ -2,8 +2,9 @@
     "name": "Lobby",
     "db": "chi2013",
     "port": 8000,
-    "tickFrequency": 30000,
+    "tickFrequency": 5000,
     "viihapticsEnabled": true,
+    "fixedTime": [2013, 3, 30, 9, 21],
     "videoDir": "http://92.243.30.77:8000/videos",
     "roomOrder": ["251", "252A", "252B", "253", "Blue", "241", "242A", "242B", "242AB", "243", "Havane", "351", "352AB", "Bordeaux", "342A", "343", "361", "362/363", "interactivity"],
     "orientation": "vertical",
@@ -67,48 +68,48 @@
         }
     },
     "sessionTiles": {
-        "A": {
-            "type": "filter",
-            "when": "session",
-            "volatile": true
-        },
-        "B": {
-            "type": "filter",
-            "when": "session",
-            "volatile": true
-        },
-        "C": {
-            "type": "filter",
-            "when": "session",
-            "volatile": true
-        },
-        "D": {
-            "type": "filter",
-            "when": "session",
-            "volatile": true
-        },
         "E": {
+            "type": "filter",
+            "when": "session",
+            "volatile": true
+        },
+        "F": {
+            "type": "filter",
+            "when": "session",
+            "volatile": true
+        },
+        "G": {
+            "type": "filter",
+            "when": "session",
+            "volatile": true
+        },
+        "H": {
+            "type": "filter",
+            "when": "session",
+            "volatile": true
+        },
+        "A": {
             "type": "filter",
             "when": "session",
             "filter": {
                 "room": ["Blue", "241", "242", "243"]
             }
         },        
-        "F": {
+        "B": {
             "type": "filter",
             "when": "session",
             "filter": {
                 "room": ["251", "252A", "252B", "253"]
             }
         },
-        "G": {
+        "C": {
             "type": "filter",
             "when": "session",
             "filter": {
                 "room": ["Bordeaux", "342A", "343", "361", "362/363"]
             }
         },
-        "H": {
+        "D": {
             "type": "filter",
             "when": "session",
             "filter": {
